--- a/package.json
+++ b/package.json
@@ -10,22 +10,39 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.24.0",
+    "@clerk/themes": "^1.7.6",
+    "@hookform/resolvers": "^3.3.1",
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.6.1",
     "autoprefixer": "10.4.16",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "lucide-react": "^0.279.0",
+    "mime": "^3.0.0",
     "mongoose": "^7.5.2",
     "next": "13.5.2",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.46.1",
     "svix": "^1.12.0",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
-    "uploadthing": "^5.6.1"
+    "uploadthing": "^5.6.1",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "@types/mime": "^3.0.1",
+    "prisma": "^5.3.1"
   }
 }
